--- a/site/themes/redwood/sass/core/base.scss
+++ b/site/themes/redwood/sass/core/base.scss
@@ -48,6 +48,12 @@ body {
 .p-3 {
   padding: 24px;
 }
+.mt-2 {
+	margin-top: 16px;
+}
+.mt-3 {
+	margin-top: 24px;
+}
 
 .p-4 {
   padding: 40px;
